启动参数更改